--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zingle/reddrop",
-  "version": "0.9.2",
+  "version": "1.0.0-beta1",
   "description": "drop files into redis dropbox",
   "bin": {
       "reddrop": "reddrop.js"
